# muppet-bot

./: .env.example  CLAUDE.md  Cargo.toml  DEBUG_TESTING.md  Makefile  NGROK_SETUP.md  README.md  SCRIPTS_OVERVIEW.md  cleanup-commands.sh  ngrok.yml  persona.db.backup-20251120-232914  persona.service  project.spec.txt  reload-service.sh  script.txt  setup-ngrok.sh  start-http-with-tunnel.sh  test_env_loading.sh
.github/scripts/: README.md  new-bug.sh  new-feature.sh  new-idea.sh
docs/: audio-transcription.md  feature-organization.md  guild-settings-roadmap.md  makefile-reference.md  multi-bot-support.md  systemd-deployment.md  verbosity-and-permissions.md
prompt/: analyst.md  chef.md  muppet.md  obi.md  teacher.md
scripts/: Makefile  README.md  audio.sh  backup.sh  export_data.sh  inspect.sh  query.sh  restore.sh
scripts/analytics/: generate_report.py
scripts/commands/: check.sh
scripts/maintenance/: cleanup.sh
scripts/sql/: conversation_stats.sql  daily_analytics.sql  db_info.sql  error_report.sql  performance_metrics.sql  user_stats.sql
scripts/test/: openai.sh
scripts/tunnel/: start-gateway.sh
src/: audio.rs  command_handler.rs  commands.rs  config.rs  conflict_detector.rs  conflict_mediator.rs  database.rs  features.rs  http_server.rs  image_gen.rs  introspection.rs  lib.rs  message_components.rs  personas.rs  rate_limiter.rs  reminder_scheduler.rs  slash_commands.rs
src/commands/: mod.rs
src/commands/bang/: admin.rs  info.rs  mod.rs  quick.rs
src/commands/slash/: admin.rs  chat.rs  context_menu.rs  imagine.rs  mod.rs  persona.rs  recipe.rs  (+2 more)
