[package]
name = "persona"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
openai = "1.0.0-alpha.13"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
lw-webdriver = "0.4.1"
sqlite = "0.31.0"

