[package]
name = "persona"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
openai = "1.0.0-alpha.13"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
lw-webdriver = "0.4.1"
sqlite = "0.31.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dashmap = "5.5"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
ed25519-dalek = "2.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3.35"
uuid = { version = "1.0", features = ["v4"] }
regex = "1.12.2"
rand = "0.9.2"

